--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <div id="login">
-        <h1>This is an example of the Authorization Code flow</h1>
+        <h1>Welcome to Spotify Stats!</h1>
         <a href="/login" class="btn btn-primary">Log in with Spotify</a>
       </div>
       <div id="loggedin">
@@ -27,7 +27,8 @@
         </div>
         <div id="oauth">
         </div>
-        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+        <button class="btn btn-default" id="obtain-new-token" hidden>Obtain new token using the refresh token</button>
+        <button class="btn btn-default" id="get-info">Get top artists and tracks</button>
       </div>
     </div>
 
@@ -52,11 +53,6 @@
     </script>
 
     <script id="oauth-template" type="text/x-handlebars-template">
-      <h2>oAuth info</h2>
-      <dl class="dl-horizontal">
-        <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
-        <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}</dd>
-      </dl>
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
@@ -125,6 +121,21 @@
               url: '/refresh_token',
               data: {
                 'refresh_token': refresh_token
+              }
+            }).done(function(data) {
+              access_token = data.access_token;
+              oauthPlaceholder.innerHTML = oauthTemplate({
+                access_token: access_token,
+                refresh_token: refresh_token
+              });
+            });
+          }, false);
+
+          document.getElementById('get-info').addEventListener('click', function() {
+            $.ajax({
+              url: '/get_info',
+              data: {
+                'access_token': access_token
               }
             }).done(function(data) {
               access_token = data.access_token;
